# mz-textbausteine

./: .gitignore  Cargo.toml  README.md  mz-textbausteine.toml
.github/workflows/: build.yml  release.yml
src/: main.rs
